[package]
name        = "rproxy_client"
description = "A lightweight client to communicate with the Reverse Proxy Server via gRPC"
authors     = ["Ahmad Kaouk <ahmadkaouk.93@gmail.com>"]
version     = "0.1.0"
edition     = "2021"

[dependencies]
clap  = { version = "4.0.23", features = ["derive"] }
prost = "0.11.2"
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
tonic = "0.8.2"

[build-dependencies]
tonic-build = "0.8.2"
