[package]
name        = "rproxy"
description = "A simple reverse proxy with cache support"
authors     = ["Ahmad Kaouk <ahmadkaouk.93@gmail.com"]
version     = "0.1.0"
readme      = "README.md"
keywords    = ["reverse-proxy", "proxy", "cache", "rust"]
edition     = "2021"

[dependencies]
prost     = "0.11.2"
reqwest   = { version = "0.11", features = ["json"] }
tokio     = { version = "1", features = ["full"] }
tonic     = "0.8.2"
thiserror = "1.0.37"
clap      = { version = "4.0.23", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8.2"
